# koda

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .snyk  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.artifact  Dockerfile.bot-gateway  Dockerfile.memory  Dockerfile.policy-engine  Dockerfile.retrieval  Dockerfile.runtime-kernel  Dockerfile.security  LICENSE  README.md  SECURITY.md  agent.py  app-server-manager-signals-BEaGjuc8.js  buf.gen.yaml  buf.yaml  crop_to_portrait.py  docker-compose-cluster.yml  docker-compose-observability.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  koda.service.example  launcher.py  main-BwqrdVu3.js  openkodaai-koda-1.0.5.tgz  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  cut-release-tag.yml  migrations-gate.yml  pr-quality.yml  release.yml  security.yml  snyk.yml
.playwright-cli/: page-2026-04-05T00-30-52-639Z.yml  page-2026-04-05T01-26-08-849Z.yml  page-2026-04-05T01-26-13-317Z.yml  page-2026-04-05T04-32-09-765Z.yml
apps/web/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  server.mjs  tsconfig.json  vitest.config.ts
docs/: README.md  demo-data.md
docs/ai/: architecture-overview.md  change-playbook.md  configuration-and-prompts.md  embedding-stack-validation.md  llm-compatibility.md  local-runtimes-validation-report.md  local-runtimes.md  repo-map.yaml  runtime-flows.md
docs/architecture/: agent-turn-contract.md  channel-gateway-onboarding.md  evals-release-quality.md  handoffs-squad-intelligence.md  improvement-proposal.md  koda-skill-plugin-sdk.md  memory-governance.md  overview.md  production-deployment-roadmap.md  run-graph-replay.md  runtime.md  subagent-context-governance.md  thread-replies-agent-coordination.md  tool-registry-native-tools.md  top-tier-phase-contracts.md  workspace-directory-import.md
docs/config/: reference.md
docs/install/: local.md  object-storage-migration.md  vps.md
docs/openapi/: control-plane.json
docs/operations/: README.md  alerts.yml  backup-restore.md  channel-gateway-runbook.md  cluster-mode.md  evals-release-runbook.md  hardening.md  hitl-approval-runbook.md  incident-response.md  (+16 more)
examples/: sample-policies.yaml  sample-workflow.yaml
koda/: AGENTS.md  CLAUDE.md  __init__.py  __main__.py  agent_contract.py  agent_turn.py  auth.py  config.py  logging_config.py  provider_models.py  startup_validator.py  state_primary.py  telegram_types.py
rust/: Cargo.toml
rust/koda-artifact-engine/: Cargo.toml
rust/koda-artifact-engine/src/: main.rs
rust/koda-bot-gateway/: Cargo.toml
rust/koda-bot-gateway/src/: config.rs  lib.rs  main.rs  poller.rs  server.rs  store.rs  telegram.rs
rust/koda-command-guard/: Cargo.toml  pyproject.toml
rust/koda-command-guard/src/: lib.rs
rust/koda-memory-engine/: Cargo.toml
rust/koda-memory-engine/src/: main.rs
rust/koda-observability/: Cargo.toml
rust/koda-observability/src/: lib.rs
rust/koda-policy-engine/: Cargo.toml
rust/koda-policy-engine/src/: lib.rs  limiter.rs  main.rs  server.rs  slots.rs  spend.rs  store.rs
rust/koda-postgres/: Cargo.toml
rust/koda-postgres/src/: lib.rs
rust/koda-proto/: Cargo.toml  build.rs
rust/koda-proto/src/: lib.rs
rust/koda-retrieval-engine/: Cargo.toml
rust/koda-retrieval-engine/src/: main.rs
rust/koda-rpc-gateway/: Cargo.toml
rust/koda-rpc-gateway/src/: main.rs
rust/koda-runtime-kernel/: Cargo.toml
rust/koda-runtime-kernel/src/: agent_workers.rs  browser.rs  checkpoints.rs  commands.rs  isolation.rs  lib.rs  main.rs  processes.rs  server.rs  state.rs  terminals.rs  workspace.rs
rust/koda-security-core/: Cargo.toml
rust/koda-security-core/src/: lib.rs
rust/koda-security-service/: Cargo.toml
rust/koda-security-service/src/: main.rs
scripts/: build_release_artifacts.py  build_release_bundle.py  capture_docs_screenshots.py  channel_gateway_smoke.py  check_pr_quality.sh  cluster_smoke.sh  convert_bandit_json_to_sarif.py  docker_smoke.sh  doctor.py  eval_smoke.py  generate_integration_docs.py  generate_repo_map.py  install.sh  internal_rpc_codegen.sh  live_gate_smoke.py  migrate_execution_policies.py  migrate_object_storage.py  migrate_variable_scopes.py  npm_registry_metadata.py  ops_benchmark.py  release_metadata.py  release_smoke_test.py  review_dependency_changes.py  runtime_smoke_test.py  seed_demo_data.py  seed_e2e_data.py  squad_smoke.py  sync_npm_readme.py
tests/: AGENTS.md  CLAUDE.md  _provider_plugin.py  conftest.py  postgres_fixtures.py  test_agent_contract.py  test_agent_turn_contract.py  test_ai_docs.py  test_auth.py  test_bot_gateway_client.py  test_browser_bootstrap.py  test_cli_migrate.py  test_control_plane_agent_deletion.py  test_control_plane_agent_spec.py  test_control_plane_bootstrap_file.py  test_control_plane_channel_status.py  test_control_plane_cluster.py  test_control_plane_cluster_heartbeat.py  test_control_plane_cluster_http.py  test_control_plane_crash_loop.py  test_control_plane_crypto_rotation.py  test_control_plane_dashboard_api.py  test_control_plane_dashboard_memory.py  test_control_plane_dashboard_sessions.py  test_control_plane_database.py  test_control_plane_evals_api.py  test_control_plane_execution_policy.py  test_control_plane_general_validation.py  test_control_plane_graph_cutover.py  test_control_plane_improvement_proposals.py  test_control_plane_integration_verification.py  test_control_plane_isolation_wire.py  test_control_plane_lifecycle_audit.py  test_control_plane_mcp.py  test_control_plane_no_automatic_seeds.py  test_control_plane_onboarding_api.py  test_control_plane_operator_auth.py  test_control_plane_password_policy.py  test_control_plane_persistence_integration.py  test_control_plane_provider_connections.py  (+48 more)
(+1605 files in other folders)
