[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koda"
version = "1.0.6"
description = "Koda — open-source harness for multi-agent, multi-provider AI systems"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=22.7,<23.0",
    "python-dotenv>=1.2.2,<2.0",
    "structlog>=25.5.0,<26.0",
    "tenacity>=9.1.4,<10.0",
    "aiohttp>=3.13.5,<4.0",
    "aiolimiter>=1.2.1,<2.0",
    "playwright>=1.58.0,<2.0",
    "croniter>=6.2.2,<7.0",
    "beautifulsoup4>=4.14.3,<5.0",
    "boto3>=1.42.88,<2.0",
    "atlassian-python-api>=4.0.7,<5.0",
    "asyncpg>=0.31.0,<1.0",
    "asyncssh>=2.22.0,<3.0",
    "argon2-cffi>=25.1.0,<26.0",
    "kokoro-onnx>=0.5.0,<1.0",
    "openpyxl>=3.1.5,<4.0",
    "pillow>=12.2.0,<13.0",
    "pypdf>=6.10.0,<7.0.0",
    "soundfile>=0.13.1,<1.0",
    "python-docx>=1.2.0,<2.0",
    "PyYAML>=6.0.3,<7.0",
    "rapidocr-onnxruntime>=1.4.4,<2.0",
    "requests>=2.33.1,<3.0",
    "prometheus_client>=0.25.0,<1.0",
    "pybreaker>=1.4.1,<2.0",
    "cryptography>=46.0.7,<47.0",
    "grpcio>=1.80.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=7.1.0,<8.0",
    "ruff>=0.15.10,<1.0",
    "mypy>=1.20.1,<2.0",
    "types-PyYAML>=6.0.12.20260408,<7.0",
    "pygments>=2.20.0,<3.0",
    "pip-audit>=2.10.0,<3.0",
    "bandit>=1.9.4,<2.0",
    "watchfiles>=1.1.1,<2.0",
]
whatsapp = ["pywa>=3.9.0,<4.0"]
discord = ["discord.py>=2.7.1,<3.0"]
slack = ["slack-bolt[async]>=1.28.0,<2.0"]
teams = ["botbuilder-core>=4.17.1,<5.0", "botbuilder-integration-aiohttp>=4.17.1,<5.0"]
line = ["line-bot-sdk>=3.23.0,<4.0"]
channels-all = [
    "pywa>=3.9.0,<4.0",
    "discord.py>=2.7.1,<3.0",
    "slack-bolt[async]>=1.28.0,<2.0",
    "botbuilder-core>=4.17.1,<5.0",
    "botbuilder-integration-aiohttp>=4.17.1,<5.0",
    "line-bot-sdk>=3.23.0,<4.0",
]

[project.scripts]
koda = "koda.control_plane.__main__:main"
koda-control-plane = "koda.control_plane.__main__:main"
koda-runtime-worker = "koda.__main__:main"

[tool.setuptools.packages.find]
include = ["koda*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = []
markers = [
    "real_policy_gate: run dispatcher tests against the real central execution-policy gate",
]

[tool.coverage.report]
# Repo-wide coverage is still climbing while large runtime/control-plane modules are
# being brought under test. Keep this gate aligned with the measured baseline so
# the suite fails on regressions instead of on a stale target.
fail_under = 53.5

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["runtime_*", "control_plane_runtime", "logs", "koda/internal_rpc/generated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]  # ternary operator suggestions reduce readability for complex expressions

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "koda.handlers.atlassian",
    "koda.handlers.automation",
    "koda.handlers.browser",
    "koda.handlers.devops",
    "koda.handlers.fileops",
    "koda.handlers.google_workspace",
    "koda.handlers.messages",
    "koda.handlers.packages",
    "koda.services.atlassian_client",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "koda.internal_rpc.generated.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "boto3.*",
    "botocore.*",
    "atlassian.*",
    "playwright.*",
    "psycopg2.*",
    "psycopg.*",
    "aiohttp.*",
    "grpc.*",
    "grpc_aio.*",
    "google.*",
    "asyncssh.*",
    "qdrant_client.*",
    "chromadb.*",
    "langgraph.*",
    "langchain_core.*",
    "elevenlabs.*",
    "openai.*",
    "anthropic.*",
    "prost.*",
    "tonic.*",
    "dotenv.*",
    "yaml.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=7.1.0,<8.0",
    "ruff>=0.15.10,<1.0",
    "mypy>=1.20.1,<2.0",
    "types-PyYAML>=6.0.12.20260408,<7.0",
    "pygments>=2.20.0,<3.0",
    "pip-audit>=2.10.0,<3.0",
    "bandit>=1.9.4,<2.0",
    "watchfiles>=1.1.1,<2.0",
]
