[workspace]
members = [
  "koda-artifact-engine",
  "koda-memory-engine",
  "koda-observability",
  "koda-proto",
  "koda-retrieval-engine",
  "koda-runtime-kernel",
  "koda-security-core",
  "koda-security-service",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
prost = "0.14"
prost-types = "0.13"
protoc-bin-vendored = "3.1"
sha2 = "0.11"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-postgres = "0.7"
tonic = { version = "0.12", features = ["transport", "tls"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
