[workspace]
members = [
  "koda-artifact-engine",
  "koda-bot-gateway",
  "koda-memory-engine",
  "koda-observability",
  "koda-postgres",
  "koda-policy-engine",
  "koda-proto",
  "koda-retrieval-engine",
  "koda-runtime-kernel",
  "koda-security-core",
  "koda-security-service",
]
# koda-command-guard ships a PyO3 cdylib built by maturin and links against a
# specific Python interpreter at build time. Including it in the workspace
# would break ``cargo test --workspace`` (the CI gate for sidecars) because
# pyo3 needs PYTHON_SYS_EXECUTABLE wired up. Build it explicitly with
# ``scripts/dev/build_command_guard.sh`` instead.
exclude = ["koda-command-guard"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bb8 = "0.8"
bb8-postgres = "0.8"
prost = "0.13"
prost-types = "0.13"
protoc-bin-vendored = "3.1"
sha2 = "0.11"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-postgres = "0.7"
tonic = { version = "0.12", features = ["transport", "tls"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2.0"
async-stream = "0.3"
futures = "0.3"
