[package]
name = "koda-memory-engine"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
koda-observability = { path = "../koda-observability" }
koda-proto = { path = "../koda-proto" }
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
