[package]
name = "koda-retrieval-engine"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
koda-observability = { path = "../koda-observability" }
koda-proto = { path = "../koda-proto" }
prost-types.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tokio-postgres.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
