[package]
name = "koda-rpc-gateway"
edition.workspace = true
version.workspace = true
description = "Sidecar connection multiplexer with circuit breakers and per-workspace fairness (Phase 1D)."
license = "Apache-2.0"

[[bin]]
name = "koda-rpc-gateway"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
koda-observability = { path = "../koda-observability" }
koda-proto = { path = "../koda-proto" }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
