[package]
name = "koda-runtime-kernel"
edition.workspace = true
version.workspace = true

[dependencies]
async-stream = "0.3"
anyhow.workspace = true
koda-observability = { path = "../koda-observability" }
koda-proto = { path = "../koda-proto" }
koda-security-core = { path = "../koda-security-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
